--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,9 @@ repos:
         args: [ "--branch", "master" ]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.2
+    rev: v0.1.6
     hooks:
       - id: ruff
-        args:
-          - "--fix"
-          - "--exit-non-zero-on-fix"
+        args: [--fix, --exit-non-zero-on-fix]
+      
       - id: ruff-format
-        args:
-          - "--exit-non-zero-on-format"
