--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,14 @@ strict = true
 
 [tool.ruff]
 line-length = 88
-target-version = 'py38'
+target-version = "py311"
+exclude = ["venv", ".venv", "dist", "__pycache__"]
 
-[tool.ruff.format]
-quote-style = "single"
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
+
+[dependency-groups]
+dev = [
+    "ruff (>=0.14.2,<0.15.0)"
+]
