--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,32 @@
 [project]
 name = "labyrinth_game"
 version = "0.1.0"
-description = ""
+description = "Текстовая приключенческая игра-лабиринт с загадками и сокровищами"
 authors = [
-    {name = "BaranovaaPolinaa SweetDeer.1@yandex.ru"}
+    {name = "BaranovaaPolinaa", email = "SweetDeer.1@yandex.ru"}
 ]
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [
-]
-packages = [
-    { include = "labyrinth_game" },
-]
 
-[tool.poetry.scripts]
-project = "labyrinth_game.main:main"
+[tool.poetry]
+name = "labyrinth_game"
+version = "0.1.0"
+description = "Текстовая приключенческая игра-лабиринт с загадками и сокровищами"
+authors = ["BaranovaaPolinaa <SweetDeer.1@yandex.ru>"]
+readme = "README.md"
 
+[tool.poetry.dependencies]
+python = "^3.10"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.1.6"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.mypy]
-python_version = 3.8
-show_error_codes = true
-plugins = ["pydantic.mypy"]
-strict = true
+[tool.poetry.scripts]
+project = "labyrinth_game.main:main"
 
 [tool.ruff]
 line-length = 88
@@ -35,8 +36,3 @@ exclude = ["venv", ".venv", "dist", "__pycache__"]
 [tool.ruff.lint]
 select = ["E", "F", "I"]
 ignore = []
-
-[dependency-groups]
-dev = [
-    "ruff (>=0.14.2,<0.15.0)"
-]
